@@ -2,6 +2,9 @@
 - lots of stupid little files in hist, eg. im_hsp.c ... paste them into larger 
   modules
 
+- quite a few hist operations have no GUI ... lhisteq, for example? or
+  histspec?
+
 - check the order of decls in hist.h, is it sensible?
 
   check the order in freq_flt as well
